--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <title>CODESTARポートフォリオ</title>
+    <title>とっしーポートフォリオ</title>
     <meta name="description" content="プログラミング学習コミュニティ" />
     <meta name="keywords" content="IT,プログラミング,コミュニティ" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -23,12 +23,166 @@
     <header>
       <nav class="nav_all">
         <ul class="nav_list">
-          <li class="nav_item"><a class="nav_link" href="https://codestar.dev">ABOUT</a></li>
-          <li class="nav_item"><a class="nav_link" href="https://codestar.dev">SKILL</a></li>
-          <li class="nav_item"><a class="nav_link" href="https://codestar.dev">WORKS</a></li>
-          <li class="nav_item"><a class="nav_link"><a href="https://codestar.dev">CONTACT</a></li>
+          <li class="nav_item">
+            <a class="nav_link" href="#about">ABOUT</a>
+          </li>
+          <li class="nav_item">
+            <a class="nav_link" href="#skill">SKILL</a>
+          </li>
+          <li class="nav_item">
+            <a class="nav_link" href="#object">OBJECT</a>
+          </li>
+          <li class="nav_item">
+            <a class="nav_link" href="#contact">CONTACT</a>
+          </li>
         </ul>
       </nav>
     </header>
+    <main>
+      <section class="top">
+        <div>
+          <h1 class="top_title">TOSSY</h1>
+          <p class="top_subtitle">MY PORTFOLIO</p>
+        </div>
+      </section>
+      <section class="about section" id="about">
+        <div class="inner">
+          <h2 class="font1">ABOUT</h2>
+          <img src="img/logo.png" class="about_img" alt="プロフィール画像" />
+          <p class="font3">とっしー</p>
+          <p class="font2">
+            職歴:建設業<br />→転職も視野に入れてWeb製作を学習中
+          </p>
+          <p class="font4">
+            現在、建設関係の会社の電力通信部門で現場監督兼、事務の業務に勤めています。<br />
+            夜勤や月の残業が100時間を超える環境から脱したいと思い、プログラミングとWebマーケティングの学習を開始しました。
+          </p>
+        </div>
+      </section>
+      <section class="skill section" id="skill">
+        <div class="inner">
+          <h2 class="font1">SKILL</h2>
+          <p class="font2">
+            まだまだ駆け出しですが、<br />Web製作を得意としています。
+          </p>
+          <div class="skill_list">
+            <div class="skill_item">
+              <div class="skill_img">
+                <img src="img/html.png" alt="スキル1" />
+              </div>
+              <div class="skill_body">
+                <h3>HTML/CSS</h3>
+                <p>
+                  学習歴は約3ヶ月です。現在は、主に企業様向けのWebサイトの製作を請負い、製作させていただいています。
+                </p>
+              </div>
+            </div>
+            <div class="skill_item">
+              <div class="skill_img">
+                <img src="img/javascript.png" alt="スキル2" />
+              </div>
+              <div class="skill_body">
+                <h3>JavaScript</h3>
+                <p>
+                  学習歴約3ヶ月です。ご要望に合わせたモーションをつけさせていただきますので、お気軽にご相談ください。
+                </p>
+              </div>
+            </div>
+            <div class="skill_item">
+              <div class="skill_img">
+                <img src="img/wordpress.png" alt="スキル３" />
+              </div>
+              <div class="skill_body">
+                <h3>WordPress</h3>
+                <p>
+                  企業様からご要望があれば、wordpressを使用して低価格でのWeb制作もやらせて頂いています。
+                </p>
+              </div>
+            </div>
+            <div class="skill_item">
+              <div class="skill_img">
+                <img src="img/adobe_premiere_pro.png" alt="スキル４" />
+              </div>
+              <div class="skill_body">
+                <h3>Adobe Premire Pro</h3>
+                <p>
+                  Premire
+                  Proを使用しての動画作成も承っております。機材なども揃っておりますので、撮影からのご依頼にもお応えしております。
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="object section" id="object">
+        <div class="inner">
+          <div class="font1">
+            <h2>OBJECT</h2>
+          </div>
+          <div class="font2">
+            <p>
+              学んでいるスクールの主要案件取引先です。<br />僕自身もこのようなサイトを製作していきたいです。
+            </p>
+          </div>
+          <div class="object_all">
+            <figure class="object_item">
+              <a href="https://www.takeda.tv">
+                <img src="img/takeda.png" alt="武田塾" />
+              </a>
+              <figcaption class="object_body">
+                <p>武田塾</p>
+              </figcaption>
+            </figure>
+            <figure class="object_item">
+              <a href="https://www.naorusalon.com">
+                <img src="img/naoru.png" alt="NAORU" />
+              </a>
+              <figcaption class="object_body">
+                <p>NAORU</p>
+              </figcaption>
+            </figure>
+            <figure class="object_item">
+              <a href="https://gyoza.pro">
+                <img src="img/gyoza.png" alt="優しい餃子" />
+              </a>
+              <figcaption class="object_body">
+                <p>優しい餃子</p>
+              </figcaption>
+            </figure>
+          </div>
+        </div>
+      </section>
+      <section class="contact section" id="contact">
+        <div class="inner">
+          <h2 class="font1">CONTACT</h2>
+          <p class="font2">
+            お問い合わせは、<br />
+            Twitter、公式LINEでお願い致します。
+          </p>
+          <ul class="contact_list">
+            <li>
+              <a href="https://twitter.com/tossy_account">
+                <img
+                  class="contact_img"
+                  src="img/twitter.png"
+                  alt="twitterアイコン"
+                />
+
+                <a href="https://lin.ee/Hx0XBFM"
+                  ><img
+                    src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png"
+                    alt="友だち追加"
+                /></a>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <footer class="bottom">
+      <div class="inner">
+        <p class="copyright">©︎2022 tossy PORTFOLIO</p>
+      </div>
+    </footer>
   </body>
 </html>
